--- a/views/add_post.ejs
+++ b/views/add_post.ejs
@@ -7,7 +7,7 @@
     <%- include('partials/_navigation') %>
 
       <!-- Page Header -->
-      <header class="masthead" style="background-image: url('img/contact-bg.jpg')">
+      <header class="masthead" style="background-image: url('img/add-bg.jpg')">
         <div class="overlay"></div>
         <div class="container">
           <div class="row">
@@ -22,29 +22,30 @@
       </header>
 
       <!-- Main Content -->
-      <div class="container">
+      <div class="container mb-5">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <form novalidate>
+            <h2>Create A Post</h2>
+            <form method="POST">
               <div class="control-group">
                 <div class="form-group floating-label-form-group controls">
                   <label>Post Title</label>
-                  <input type="text" class="form-control" placeholder="Name" id="name" required
-                    data-validation-required-message="Please enter your name.">
+                  <input type="text" class="form-control" placeholder="Post Title" id="title" name="title" required
+                    data-validation-required-message="Please enter post title.">
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
               <div class="control-group">
                 <div class="form-group floating-label-form-group controls">
                   <label>Post Detail</label>
-                  <textarea rows="5" class="form-control" placeholder="Message" id="message" required
-                    data-validation-required-message="Please enter a message."></textarea>
+                  <textarea rows="5" class="form-control" placeholder="Post detail..." id="detail" name="detail" required
+                    data-validation-required-message="Please enter post detail."></textarea>
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
               <br>
               <div id="success"></div>
-              <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+              <button type="submit" class="btn btn-primary" id="createButton">Create</button>
             </form>
           </div>
         </div>
