--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -13,7 +13,7 @@
           <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
               <div class="page-heading">
-                <h1>Add New Post</h1>
+                <h1>Edit Post</h1>
 
               </div>
             </div>
@@ -25,13 +25,13 @@
       <div class="container mb-5">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <h2>Create A Post</h2>
-            <form method="POST" action="/post">
+            <h2>Edit The Post</h2>
+            <form method="POST" action="/post/<%= post.id %>?_method=PUT">
               <div class="control-group">
                 <div class="form-group floating-label-form-group controls">
                   <label>Post Title</label>
-                  <input type="text" class="form-control" placeholder="Post Title" id="title" name="title" required
-                    data-validation-required-message="Please enter post title.">
+                  <input type="text" class="form-control" placeholder="Post Title" id="title" name="title"
+                    value="<%= post.title %>" required data-validation-required-message="Please enter post title.">
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
@@ -39,13 +39,13 @@
                 <div class="form-group floating-label-form-group controls">
                   <label>Post Detail</label>
                   <textarea rows="5" class="form-control" placeholder="Post detail..." id="detail" name="detail"
-                    required data-validation-required-message="Please enter post detail."></textarea>
+                    required data-validation-required-message="Please enter post detail."><%= post.detail %></textarea>
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
               <br>
               <div id="success"></div>
-              <button type="submit" class="btn btn-primary" id="createButton">Create</button>
+              <button type="submit" class="btn btn-primary" id="createButton">Update</button>
             </form>
           </div>
         </div>
