--- a/views/post.ejs
+++ b/views/post.ejs
@@ -13,7 +13,9 @@
           <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
               <div class="post-heading">
-                <h1><%= post.title %></h1>
+                <h1>
+                  <%= post.title %>
+                </h1>
                 <h2 class="subheading"><!-- Subheading --></h2>
                 <span class="meta">Posted by
                   <a href="#">Start Bootstrap</a>
@@ -29,8 +31,20 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
-              <p><%= post.detail %></p>
-
+              <p>
+                <%= post.detail %>
+              </p>
+            </div>
+            <div class="col-lg-4 col-md-2 mx-auto">
+              <div class="d-flex flex-column">
+                <a class="btn btn-primary my-2" href="/post/<%= post.id %>/edit">
+                  <i class="fas fa-pen mr-1"></i> Edit Post
+                </a>
+                <a class="btn btn-danger my-2" href="/post/<%= post.id %>?_method=DELETE"
+                  onclick="return confirm('Are you sure?')">
+                  <i class="fas fa-trash mr-1"></i> Delete Post
+                </a>
+              </div>
             </div>
           </div>
         </div>
